--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "outDir": "./dist/src"
+    "outDir": "./dist/src",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
